--- a/Api/App.Api.csproj
+++ b/Api/App.Api.csproj
@@ -7,7 +7,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
     <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="7.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\App.Contracts\App.Contracts.csproj" />
   </ItemGroup>
 
 </Project>
