--- a/AbpSeed/appsettings.json
+++ b/AbpSeed/appsettings.json
@@ -8,6 +8,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Default": "",
-    "MySQLConnection": ""
+    "MySQLConnection": "Server=sh-cdb-3ql7v8s2.sql.tencentcdb.com;port=63816;Database=ga_tejing;Uid=qjroot;Pwd=qijin=mysql;"
   }
 }
