--- a/Api/App.Api.csproj
+++ b/Api/App.Api.csproj
@@ -15,4 +15,8 @@
     <ProjectReference Include="..\App.Contracts\App.Contracts.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Controllers\Api\" />
+  </ItemGroup>
+
 </Project>
