--- a/Api/App.Api.csproj
+++ b/Api/App.Api.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\App.Contracts\App.Contracts.csproj" />
+    <ProjectReference Include="..\Volo.Abp.Swagger\Volo.Abp.Swagger.csproj" />
   </ItemGroup>
 
   <ItemGroup>
