--- a/Volo.Abp.Swagger/Volo.Abp.Swagger.csproj
+++ b/Volo.Abp.Swagger/Volo.Abp.Swagger.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -10,11 +10,20 @@
     <PackageReference Include="Abp.AspNetCore" Version="8.1.0" />
     <PackageReference Include="Abp.Web.Common" Version="8.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.SwaggerGen" Version="6.5.0" />
-    <PackageReference Include="Swashbuckle.AspNetCore.SwaggerUI" Version="6.5.0" />
     <PackageReference Include="Volo.Abp.AspNetCore" Version="7.0.2" />
     <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="7.0.2" />
     <PackageReference Include="Volo.Abp.Core" Version="7.0.2" />
     <PackageReference Include="Volo.Abp.VirtualFileSystem" Version="7.0.2" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Swashbuckle.AspNetCore.SwaggerUI\Swashbuckle.AspNetCore.SwaggerUI.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="abp.swagger.js">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
