--- a/AbpSeed/App.AbpSeed.Main.csproj
+++ b/AbpSeed/App.AbpSeed.Main.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="7.0.2" />
     <PackageReference Include="Volo.Abp.Autofac" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.AutoMapper" Version="7.0.3" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="7.0.2" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore.MySQL" Version="7.0.2" />
   </ItemGroup>
