--- a/Api/App.Api.csproj
+++ b/Api/App.Api.csproj
@@ -13,11 +13,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\App.Contracts\App.Contracts.csproj" />
+    <ProjectReference Include="..\App.Models\App.Models.csproj" />
+    <ProjectReference Include="..\EFCore.MySQL\App.EFCore.MySQL.csproj" />
     <ProjectReference Include="..\Volo.Abp.Swagger\Volo.Abp.Swagger.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Controllers\Api\" />
   </ItemGroup>
 
 </Project>
