--- a/App.Models/App.Models.csproj
+++ b/App.Models/App.Models.csproj
@@ -7,9 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Data" Version="7.0.2" />
-    <PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="7.0.2" />
-    <PackageReference Include="Volo.Abp.EntityFrameworkCore.MySQL" Version="7.0.2" />
+    <Folder Include="Request\" />
+    <Folder Include="Response\" />
   </ItemGroup>
 
   <ItemGroup>
