--- a/AbpSeed/appsettings.json
+++ b/AbpSeed/appsettings.json
@@ -9,5 +9,9 @@
   "ConnectionStrings": {
     "Default": "",
     "MySQLConnection": "Server=sh-cdb-3ql7v8s2.sql.tencentcdb.com;port=63816;Database=ga_tejing;Uid=qjroot;Pwd=qijin=mysql;"
+  },
+  "Redis": {
+    "IsEnabled": "true",
+    "Configuration": "127.0.0.1:6379"
   }
 }
