--- a/App.Services/App - Backup.Services.csproj
+++ b/App.Services/App - Backup.Services.csproj
@@ -4,16 +4,10 @@
     <TargetFramework>net7.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Request\" />
-    <Folder Include="Response\" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\App.Entities\App.Entities.csproj" />
+    <PackageReference Include="Volo.Abp.Caching" Version="7.0.3" />
   </ItemGroup>
 
 </Project>
