--- a/Api/App.Api.csproj
+++ b/Api/App.Api.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -7,12 +7,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
-    <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="7.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="7.0.3" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\App.Contracts\App.Contracts.csproj" />
+    <ProjectReference Include="..\App.Extensions\App.Extensions.csproj" />
     <ProjectReference Include="..\App.Models\App.Models.csproj" />
     <ProjectReference Include="..\EFCore.MySQL\App.EFCore.MySQL.csproj" />
     <ProjectReference Include="..\Volo.Abp.Swagger\Volo.Abp.Swagger.csproj" />
