--- a/App.Models/App.Models.csproj
+++ b/App.Models/App.Models.csproj
@@ -12,6 +12,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Volo.Abp.AutoMapper" Version="7.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\App.Entities\App.Entities.csproj" />
   </ItemGroup>
 
