--- a/EFCore.MySQL/App.EFCore.MySQL.csproj
+++ b/EFCore.MySQL/App.EFCore.MySQL.csproj
@@ -10,6 +10,7 @@
     <PackageReference Include="Volo.Abp.Data" Version="7.0.2" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="7.0.2" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore.MySQL" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.VirtualFileSystem" Version="7.0.3" />
   </ItemGroup>
 
   <ItemGroup>
