--- a/Api/App.Api.csproj
+++ b/Api/App.Api.csproj
@@ -9,6 +9,7 @@
   <ItemGroup>
     <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
     <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="7.0.3" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="7.0.3" />
   </ItemGroup>
 
   <ItemGroup>
