--- a/AbpSeed/appsettings.json
+++ b/AbpSeed/appsettings.json
@@ -8,7 +8,7 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Default": "",
-    "MySQLConnection": "Server=sh-cdb-3ql7v8s2.sql.tencentcdb.com;port=63816;Database=ga_tejing;Uid=qjroot;Pwd=qijin=mysql;"
+    "MySQLConnection": ""
   },
   "Redis": {
     "IsEnabled": "true",
