--- a/samples/Swashbuckle/src/SwashbuckleSample.HttpApi.Host/SwashbuckleSample.HttpApi.Host.csproj
+++ b/samples/Swashbuckle/src/SwashbuckleSample.HttpApi.Host/SwashbuckleSample.HttpApi.Host.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<Import Project="..\..\common.props" />
 
@@ -15,7 +15,7 @@
 		<PackageReference Include="Volo.Abp.AspNetCore.MultiTenancy" Version="$(VoloAbpPackageVersion)" />
 		<PackageReference Include="Volo.Abp.Autofac" Version="$(VoloAbpPackageVersion)" />
 		<PackageReference Include="Volo.Abp.AspNetCore.Serilog" Version="$(VoloAbpPackageVersion)" />
-		<PackageReference Include="Volo.Abp.Swashbuckle" Version="$(VoloAbpPackageVersion)" />
+		<!--<PackageReference Include="Volo.Abp.Swashbuckle" Version="$(VoloAbpPackageVersion)" />-->
 		<PackageReference Include="Volo.Abp.Account.Web.OpenIddict" Version="$(VoloAbpPackageVersion)" />
 		<PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Basic" Version="$(VoloAbpPackageVersion)" />
 	</ItemGroup>
@@ -24,6 +24,10 @@
 		<ProjectReference Include="..\SwashbuckleSample.Application\SwashbuckleSample.Application.csproj" />
 		<ProjectReference Include="..\SwashbuckleSample.EntityFrameworkCore\SwashbuckleSample.EntityFrameworkCore.csproj" />
 		<ProjectReference Include="..\SwashbuckleSample.HttpApi\SwashbuckleSample.HttpApi.csproj" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\..\..\..\framework\src\AbpSeed.Abp.Swashbuckle\AbpSeed.Abp.Swashbuckle.csproj" />
 	</ItemGroup>
 
 	<ItemGroup>
