--- a/templates/abpseed/Api/App.Api.csproj
+++ b/templates/abpseed/Api/App.Api.csproj
@@ -14,10 +14,9 @@
 
   <ItemGroup>
     <ProjectReference Include="..\App.Contracts\App.Contracts.csproj" />
+    <ProjectReference Include="..\App.EFCore.MySQL\App.EFCore.MySQL.csproj" />
     <ProjectReference Include="..\App.Extensions\App.Extensions.csproj" />
     <ProjectReference Include="..\App.Models\App.Models.csproj" />
-    <ProjectReference Include="..\EFCore.MySQL\App.EFCore.MySQL.csproj" />
-    <ProjectReference Include="..\Volo.Abp.Swagger\Volo.Abp.Swagger.csproj" />
   </ItemGroup>
 
 </Project>
