--- a/templates/abpseed/App.Contracts/App.Contracts.csproj
+++ b/templates/abpseed/App.Contracts/App.Contracts.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Abstractions" Version="2.2.0" />
+    <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="7.0.3" />
   </ItemGroup>
 
 </Project>
