在Swagger中集成 theme样式
Signed-off-by: virtual <1185513330@qq.com>

--- a/framework/src/AbpSeed.Abp.Swashbuckle/AbpSeed.Abp.Swashbuckle.csproj
+++ b/framework/src/AbpSeed.Abp.Swashbuckle/AbpSeed.Abp.Swashbuckle.csproj
@@ -19,4 +19,9 @@
 		<PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<None Remove="wwwroot\swagger\ui\swagger_theme.css" />
+		<EmbeddedResource Include="wwwroot\swagger\ui\swagger_theme.css" />
+	</ItemGroup>
+
 </Project>
