--- a/templates/abpseed/AbpSeed/appsettings.json
+++ b/templates/abpseed/AbpSeed/appsettings.json
@@ -7,8 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Default": "",
-    "MySQLConnection": ""
+    "Default": "server=localhost;database=seed;user=root;password=root",
+    "MySQLConnection": "server=localhost;database=seed;user=root;password=root"
   },
   "Redis": {
     "IsEnabled": "true",
