--- a/templates/abpseed/App.EFCore.MySQL/App.EFCore.MySQL.csproj
+++ b/templates/abpseed/App.EFCore.MySQL/App.EFCore.MySQL.csproj
@@ -7,9 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Volo.Abp.Data" Version="7.0.2" />
-    <PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="7.0.2" />
-    <PackageReference Include="Volo.Abp.EntityFrameworkCore.MySQL" Version="7.0.2" />
+    <PackageReference Include="Volo.Abp.Autofac" Version="7.0.3" />
+    <PackageReference Include="Volo.Abp.Data" Version="7.0.3" />
+    <PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="7.0.3" />
+    <PackageReference Include="Volo.Abp.EntityFrameworkCore.MySQL" Version="7.0.3" />
     <PackageReference Include="Volo.Abp.VirtualFileSystem" Version="7.0.3" />
   </ItemGroup>
 
