--- a/templates/abpseed/WebApplication1/WebApplication1.csproj
+++ b/templates/abpseed/WebApplication1/WebApplication1.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net7.0</TargetFramework>
@@ -9,24 +9,14 @@
   <ItemGroup>
     <PackageReference Include="Volo.Abp.AspNetCore.Mvc" Version="7.0.3" />
     <PackageReference Include="Volo.Abp.Autofac" Version="7.0.3" />
-    <PackageReference Include="Volo.Abp.AutoMapper" Version="7.0.3" />
-    <PackageReference Include="Volo.Abp.Caching" Version="7.0.3" />
-    <PackageReference Include="Volo.Abp.Caching.StackExchangeRedis" Version="7.0.3" />
+    <PackageReference Include="Volo.Abp.Core" Version="7.0.3" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="7.0.3" />
     <PackageReference Include="Volo.Abp.EntityFrameworkCore.MySQL" Version="7.0.3" />
     <PackageReference Include="Volo.Abp.Swashbuckle" Version="7.0.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Api\App.Api.csproj" />
-    <ProjectReference Include="..\App.EFCore.MySQL\App.EFCore.MySQL.csproj" />
     <ProjectReference Include="..\App.SwaggerUI.Fix\App.SwaggerUI.Fix.csproj" />
   </ItemGroup>
-
-  <!-- <ItemGroup>
-    <None Update="swagger_theme.css">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-    </None>
-  </ItemGroup> -->
 
 </Project>
